--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="/images/cloud.png" alt="cloud_img" />
+      <img class="top-cloud" src="./images/cloud.png" alt="cloud_img" />
       <h1>I'm Binit</h1>
       <h2>A programmer!</h2>
       <img class="bottom-cloud" src="/images/cloud.png" alt="cloud_img" />
