Sorted the things with images not loading

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <img class="top-cloud" src="./images/cloud.png" alt="cloud_img" />
       <h1>I'm Binit</h1>
       <h2>A programmer!</h2>
-      <img class="bottom-cloud" src="/images/cloud.png" alt="cloud_img" />
+      <img class="bottom-cloud" src="./images/cloud.png" alt="cloud_img" />
       <img src="/images/mountain.png" alt="mountain_img" />
     </div>
 
     <div class="middle-container">
       <div class="profile">
-        <img class="pro-img" src="/images/binit (2).png" alt="binit-profile" />
+        <img class="pro-img" src="./images/binit (2).png" alt="binit-profile" />
         <h2>Hello.</h2>
         <p class="intro">
           I am a Web Developer and i have keen interest in <strong>Problem solving</strong>. I love trekking and going to gym 🏋.
@@ -35,7 +35,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="webdev-img" src="/images/wd.png" alt="web-dev-img" />
+          <img class="webdev-img" src="./images/wd.png" alt="web-dev-img" />
           <h3>Web Developer</h3>
           <p class="web-dev-p">
             I started learning to code when i was 20 and because i wanted to
@@ -44,7 +44,7 @@
           </p>
         </div>
         <div class="skill-row">
-          <img class="coding-img" src="/images/prgm.png" alt="coding-img" />
+          <img class="coding-img" src="./images/prgm.png" alt="coding-img" />
           <h3>Problem Solving</h3>
           <p>
             I love problem solving as much as i love playing video games !
