--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1>I'm Binit</h1>
       <h2>A programmer!</h2>
       <img class="bottom-cloud" src="./images/cloud.png" alt="cloud_img" />
-      <img src="/images/mountain.png" alt="mountain_img" />
+      <img src="./images/mountain.png" alt="mountain_img" />
     </div>
 
     <div class="middle-container">
